# PhoneAuth_Service-

./: .env.sample  Dockerfile  For_Russian_README.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
users/: models.py  serializers.py  urls.py  views.py
