[tool.poetry]
name = "phoneauth-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
